Name:                HeX
Version:             0.1
Synopsis:            A flexible text macro system.
Description:         A flexible text macro system.
License:             BSD3
License-file:        LICENSE
Author:              John MacFarlane
Maintainer:          jgm@berkeley.edu
Copyright:           Copyright 2010-2011 John MacFarlane
Category:            Text
Build-type:          Simple
Extra-source-files:  examples/test.lhs
Cabal-version:       >=1.2
Library
  Exposed-modules:   Text.HeX
                     Text.HeX.Types
                     Text.HeX.Standard
                     Text.HeX.Standard.Generic
                     Text.HeX.Standard.Xml
                     Text.HeX.Standard.TeX
                     Text.HeX.Standard.Html
                     Text.HeX.Standard.LaTeX
                     Text.HeX.Math.MathML
                     Text.HeX.Math.LaTeX
  Build-depends:     parsec >= 3.1, base >= 4 && < 5,
                     mtl, containers,
                     bytestring, utf8-string, blaze-builder >= 0.2 && < 0.3,
                     case-insensitive >= 0.2 && < 0.3
  if impl(ghc >= 6.12)
    Ghc-Options:     -Wall -fno-warn-unused-do-bind
  else
    Ghc-Options:     -Wall
Executable hexto
  Main-is:           hexto.hs
  Build-depends:     filepath, directory, process
  if impl(ghc >= 6.12)
    Ghc-Options:     -Wall -fno-warn-unused-do-bind
  else
    Ghc-Options:     -Wall

